--- a/src/styles.css
+++ b/src/styles.css
@@ -23,10 +23,25 @@ body {
 	border-left: 1px solid lightgray;
 }
 
-#mainContent > div:first-child {
-	padding: 40px 0;
+.mainTop {
+	padding: 15px 0;
 	border-bottom: 1px solid lightgray;
 	margin-bottom: 20px;
+	text-align: right;
+	img {
+		width: 40px;
+		transition: transform 0.5s ease;
+	}
+	img:hover {
+		transform: rotate(90deg);
+	}
+	.filter {
+		border: none;
+		background: none;
+	}
+	.filter:hover {
+		cursor: pointer;
+	}
 	
 }
 .mainCards {
