--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+:root {
+	--lightgray: lightgray;
+	--red: red;
+}
+
+
 * {
 	padding: 0;
 	margin: 0;
@@ -13,16 +19,55 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 5fr;
 	height: 100%;
-	background: red;
 }
-
-
-
 
 .leftContainer {
 	height: 100%;
+	padding: 20px;
+	padding-top: 50px;
 }
 
+.sidebar {
+	> * {
+		margin-bottom: 40px;
+	}
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+button {
+	border: 2px solid var(--lightgray);
+	border-radius: 10px;
+	background: white;
+}
+
+.newProjectButton {
+	width: 100%;
+	padding: 20px;
+}
+
+.sideBarCards {
+	padding: 10px;
+	border: 2px solid var(--lightgray);
+	button {
+		padding: 5px 10px;
+	}
+	.delete {
+		color: white;
+		background: var(--red);
+		margin-right: 10px;
+	}
+}
+
+.sideBarCards:hover {
+	cursor: pointer;
+}
+
+.eyeD {
+	display: none;
+}
 
 
 
