--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,6 @@
 	margin: 0;
 	line-height: 1.4em;
 	box-sizing: border-box;
-	outline: 1px solid red;
 }
 
 html {
@@ -20,7 +19,7 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 5fr;
 	height: 100%;
-	padding-top: 10px;
+	padding: 10px;
 }
 
 .leftContainer {
@@ -55,6 +54,7 @@ button {
 		padding: 10px;
 		margin-bottom: 20px;
 		border: 2px solid var(--lightgray);
+		border-radius: 10px;
 	}
 	button {
 		padding: 5px 10px;
@@ -106,7 +106,8 @@ dialog::backdrop {
 .topBar {
 	display: flex;
 	justify-content: space-between;
-	padding: 20px;
+	padding: 20px 40px;
+	border-bottom: 1px solid var(--lightgray);
 }
 .filter {
 	height: 30px;
@@ -117,5 +118,18 @@ dialog::backdrop {
 
 .filter:hover{
 	cursor: pointer;
-	transform: rotate(45deg);
+	transform: rotate(90deg);
+}
+
+.mainCards {
+	display: grid;
+	padding: 20px 10px;
+	grid-template-columns: repeat(auto-fit, 
+		minmax(300px, 1fr));
+	.card {
+		border-radius: 10px;
+		box-shadow: 0 0 5px var(--lightgray);
+		margin: 20px;
+		padding: 20px;
+	}
 }
