--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,7 @@ button {
 	}
 	.delete:hover {
 		box-shadow: 0 0 5px var(--red);
+		border-color: white;
 	}
 }
 
@@ -108,6 +109,13 @@ dialog::backdrop {
 	justify-content: space-between;
 	padding: 20px 40px;
 	border-bottom: 1px solid var(--lightgray);
+	div {
+		display: flex;
+	}
+	button {
+		margin-left: 30px;
+		padding: 5px 10px;
+	}
 }
 .filter {
 	height: 30px;
