--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,9 @@ body {
 	> * {
 		margin-bottom: 40px;
 	}
+	h1 {
+		text-align: center;
+	}
 }
 
 button:hover {
@@ -84,21 +87,35 @@ button {
 dialog {
 	padding: 40px;
 	margin: 150px auto;
+	width: 600px;
 	border: none;
 	border-radius: 20px;
 	box-shadow: 0 0 100px var(--lightgray);
-	input {
-		margin-left: 20px;
+	input, textarea {
 		outline: none;
 		padding: 5px 10px;
 		border-radius: 5px;
 		border: 1px solid var(--lightgray);
+		resize: none;
+	}
+	textarea {
+		height: 100px;
 	}
 	button {
-		margin-left: 20px;
 		padding: 5px 10px;
 	}	
+}
 
+dialog[open] {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	gap: 20px;
+	label {
+		text-align: right;
+	}
+	button {
+		grid-column: 1 / span 2;
+	}
 }
 
 dialog::backdrop {
