--- a/src/styles.css
+++ b/src/styles.css
@@ -17,15 +17,15 @@ html {
 
 body {
 	display: grid;
-	grid-template-columns: 1fr 5fr;
+	grid-template-columns: 1fr 4fr;
 	height: 100%;
-	padding: 10px;
 	font-family: sans-serif;
 }
 
 .leftContainer {
 	height: 100%;
-	padding: 10px;
+	padding: 40px 10px;
+	border-right: 1px solid var(--lightgray);
 }
 
 .sidebar {
@@ -126,8 +126,9 @@ dialog::backdrop {
 .topBar {
 	display: flex;
 	justify-content: space-between;
-	padding: 20px 40px;
+	padding: 40px;
 	border-bottom: 1px solid var(--lightgray);
+	
 	div {
 		display: flex;
 	}
