--- a/src/styles.css
+++ b/src/styles.css
@@ -191,6 +191,7 @@ dialog::backdrop {
 
 
 .infoModal {
+	text-align: center;
 	> * {
 		margin-top: 10px;
 	}
@@ -204,9 +205,22 @@ dialog::backdrop {
 	background: var(--lightgray);
 }
 
+.topBarCloseBtn, .sideBarCloseBtn {
+	height: 20px;
+	width: 20px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	font-size: 14px;
+	background: var(--lightgray);
+	text-align: center;
+	border-radius: 100px;
+	z-index: 2;
+}
 
-
-
+.topBarCloseBtn:hover, .sideBarCloseBtn:hover {
+	cursor: pointer;
+}
 
 
 
