--- a/src/styles.css
+++ b/src/styles.css
@@ -1,232 +1,232 @@
 :root {
-	--lightgray: lightgray;
-	--red: #ff2424;
-	--orange: #ff982b;
-	--blue: #2b9bff;
+  --lightgray: lightgray;
+  --red: #ff2424;
+  --orange: #ff982b;
+  --blue: #2b9bff;
 }
 
-
 * {
-	padding: 0;
-	margin: 0;
-	line-height: 1.4em;
-	box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  line-height: 1.4em;
+  box-sizing: border-box;
 }
 
 html {
-	height: 100vh;
+  height: 100vh;
 }
 
 body {
-	display: grid;
-	grid-template-columns: 1fr 4fr;
-	height: 100%;
-	font-family: sans-serif;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  height: 100%;
+  font-family: sans-serif;
 }
 
 .leftContainer {
-	height: 100%;
-	padding: 40px 10px;
-	border-right: 1px solid var(--lightgray);
+  height: 100%;
+  padding: 40px 10px;
+  border-right: 1px solid var(--lightgray);
 }
 
 .sidebar {
-	display: grid;
-	> * {
-		margin-bottom: 40px;
-	}
-	h1 {
-		text-align: center;
-	}
-	.logo {
-		width: 80px;
-		margin: 0px;
-		justify-self: center;
-	}
+  display: grid;
+  > * {
+    margin-bottom: 40px;
+  }
+  h1 {
+    text-align: center;
+  }
+  .logo {
+    width: 80px;
+    margin: 0px;
+    justify-self: center;
+  }
 }
 
 button:hover {
-	cursor: pointer;
-	box-shadow: 0 0 5px gray;
+  cursor: pointer;
+  box-shadow: 0 0 5px gray;
 }
 
 button {
-	border: 2px solid var(--lightgray);
-	border-radius: 10px;
-	background: white;
+  border: 2px solid var(--lightgray);
+  border-radius: 10px;
+  background: white;
 }
 
 button:focus {
-	outline: 2px solid gray;
+  outline: 2px solid gray;
 }
 
 .newProjectButton {
-	width: 100%;
-	padding: 20px;
+  width: 100%;
+  padding: 20px;
 }
 
 .sideBarCards {
-	.sideCard {
-		padding: 10px;
-		margin-bottom: 20px;
-		border: 2px solid var(--lightgray);
-		border-radius: 10px;
-	}
-	h2 {
-		margin-bottom: 10px;
-	}
-	button {
-		padding: 5px 10px;
-	}
-	.delete {
-		color: white;
-		background: var(--red);
-		margin-right: 10px;
-	}
-	.delete:hover {
-		box-shadow: 0 0 5px var(--red);
-		border-color: white;
-	}
+  .sideCard {
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 2px solid var(--lightgray);
+    border-radius: 10px;
+  }
+  h2 {
+    margin-bottom: 10px;
+  }
+  button {
+    padding: 5px 10px;
+  }
+  .delete {
+    color: white;
+    background: var(--red);
+    margin-right: 10px;
+  }
+  .delete:hover {
+    box-shadow: 0 0 5px var(--red);
+    border-color: white;
+  }
 }
 
 .sideCard:hover {
-	cursor: pointer;
-	box-shadow: 0 0 10px var(--lightgray);
+  cursor: pointer;
+  box-shadow: 0 0 10px var(--lightgray);
 }
 
 dialog {
-	padding: 40px;
-	margin: 150px auto;
-	width: 600px;
-	border: none;
-	border-radius: 20px;
-	box-shadow: 0 0 100px var(--lightgray);
-	input, textarea {
-		outline: none;
-		padding: 5px 10px;
-		border-radius: 5px;
-		border: 1px solid var(--lightgray);
-		resize: none;
-		font-family: inherit;
-	}
-	textarea {
-		height: 100px;
-	}
-	button {
-		padding: 5px 10px;
-	}	
+  padding: 40px;
+  margin: 150px auto;
+  width: 600px;
+  border: none;
+  border-radius: 20px;
+  box-shadow: 0 0 100px var(--lightgray);
+  input,
+  textarea {
+    outline: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 1px solid var(--lightgray);
+    resize: none;
+    font-family: inherit;
+  }
+  textarea {
+    height: 100px;
+  }
+  button {
+    padding: 5px 10px;
+  }
 }
 
 dialog[open] {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
-	gap: 20px;
-	label {
-		text-align: right;
-	}
-	button {
-		grid-column: 1 / span 2;
-	}
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  label {
+    text-align: right;
+  }
+  button {
+    grid-column: 1 / span 2;
+  }
 }
 
 dialog::backdrop {
-	background: var(--lightgray);
+  background: var(--lightgray);
 }
 
 .topBar {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 40px;
-	border-bottom: 1px solid var(--lightgray);
-	
-	div {
-		display: flex;
-	}
-	button {
-		padding: 5px 10px;
-	}
-	.itemAdd {
-		margin-left: 50px;
-	}
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 40px;
+  border-bottom: 1px solid var(--lightgray);
+
+  div {
+    display: flex;
+  }
+  button {
+    padding: 5px 10px;
+  }
+  .itemAdd {
+    margin-left: 50px;
+  }
 }
 .filter {
-	height: 30px;
-	width: 30px;
-	border-radius: 100px;
-	transition: transform 0.5s ease;
+  height: 30px;
+  width: 30px;
+  border-radius: 100px;
+  transition: transform 0.5s ease;
 }
 
-.filter:hover{
-	cursor: pointer;
-	transform: rotate(90deg);
+.filter:hover {
+  cursor: pointer;
+  transform: rotate(90deg);
 }
 
 .mainCards {
-	display: grid;
-	padding: 20px 10px;
-	grid-template-columns: repeat(auto-fit, 
-		minmax(300px, 1fr));
-	.card {
-		border-radius: 10px;
-		box-shadow: 0 0 5px var(--lightgray);
-		margin: 20px;
-		padding: 20px;
-	}
-	.card:hover {
-		box-shadow: 0 0 10px var(--lightgray);
-		cursor: pointer;
-	}
-	div {
-		margin-top: 10px;
-	}
-	.removeBtn {
-		background: var(--red);
-		color: white;
-	}
-	.removeBtn:hover {
-		border-color: white;
-		box-shadow: 0 0 5px var(--red);
-	}
-	button {
-		padding: 5px 15px;
-		margin-right: 10px;
-	}
+  display: grid;
+  padding: 20px 10px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  .card {
+    border-radius: 10px;
+    box-shadow: 0 0 5px var(--lightgray);
+    margin: 20px;
+    padding: 20px;
+  }
+  .card:hover {
+    box-shadow: 0 0 10px var(--lightgray);
+    cursor: pointer;
+  }
+  div {
+    margin-top: 10px;
+  }
+  .removeBtn {
+    background: var(--red);
+    color: white;
+  }
+  .removeBtn:hover {
+    border-color: white;
+    box-shadow: 0 0 5px var(--red);
+  }
+  button {
+    padding: 5px 15px;
+    margin-right: 10px;
+  }
 }
 
 .completed {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
-
 .infoModal {
-	text-align: center;
-	> * {
-		margin-top: 10px;
-	}
+  text-align: center;
+  > * {
+    margin-top: 10px;
+  }
 }
 
 .infoModal[open] {
-	display: block;
+  display: block;
 }
 
 .infoModal::backdrop {
-	background: var(--lightgray);
+  background: var(--lightgray);
 }
 
-.topBarCloseBtn, .sideBarCloseBtn {
-	height: 20px;
-	width: 20px;
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	font-size: 14px;
-	background: var(--lightgray);
-	text-align: center;
-	border-radius: 100px;
-	z-index: 2;
+.topBarCloseBtn,
+.sideBarCloseBtn {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 14px;
+  background: var(--lightgray);
+  text-align: center;
+  border-radius: 100px;
+  z-index: 2;
 }
 
-.topBarCloseBtn:hover, .sideBarCloseBtn:hover {
-	cursor: pointer;
+.topBarCloseBtn:hover,
+.sideBarCloseBtn:hover {
+  cursor: pointer;
 }
